--- a/www/index.html
+++ b/www/index.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="js/pgb.js"></script>
 		<script src="cordova.js"></script>
 	</head>
 	<body onload="init()">
 		<h1>Business Card</h1>
-		<table>
+		<table id="tab">
 			<tr>
 				<td>Imię i nazwisko</td>	
 				<td>Radosław Smyksy</td>				
