icon and splash added

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,9 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="js/pgb.js"></script>
 		<script src="cordova.js"></script>
+		<platform name="android">
+			<icon src="img/icon" width="180" height="180" />
+		</platform>
 	</head>
 	<body onload="init()">
 		<h1>Business Card</h1>
